# datashell-py

./: .gitignore  README.md  pyproject.toml
src/data/: credit_card_transactions.yaml  scratch.ipynb  test.yaml
src/datashell-py/: main.py  metadata_reader.py
src/lib/: metadata_reader.py
